--- a/pyrobots/src/css/Login.css
+++ b/pyrobots/src/css/Login.css
@@ -1,24 +1,23 @@
-h2{
-    padding: 20px;
+h1{
+    padding: 60px;
     text-align: center;
 }
 
-.create-match-container{
+.login-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-right:140px;
+    gap: 20px;
     font-size: 20px;
+    margin-right: 40px;
 }
 
-.btn{
-    padding: 10px;
-    margin: 0 auto;
+.form-control{
+    margin: 0px 0px 20px;
 }
 
-.btn-container{
+.container-button{
     display: flex;
-    padding-top: 10px;
-    gap: 10px;
+    justify-content: center;
 }
