--- a/pyrobots/src/css/App.css
+++ b/pyrobots/src/css/App.css
@@ -1,38 +1,13 @@
-.App {
-  text-align: center;
+body {
+  /* background-image: url('https://i.pinimg.com/originals/e5/68/eb/e568eb12a0b19281f72fa0cc65162cb5.jpg'); */
+  /* background-image: url('https://cdn.pixabay.com/photo/2022/06/20/14/20/space-7273891_960_720.jpg'); */
+  /* background-image: url('https://static.vecteezy.com/system/resources/previews/002/623/564/original/abstract-perspective-green-grid-retro-futuristic-neon-line-on-dark-background-80s-design-perspective-distorted-plane-landscape-composed-of-crossed-neon-lights-and-laser-beams-illustration-vector.jpg');*/
+  background-image: url('https://static.vecteezy.com/system/resources/previews/002/597/461/non_2x/abstract-dark-hexagon-pattern-on-green-and-blue-neon-light-background-technology-style-modern-futuristic-geometric-shape-web-banner-design-you-can-use-for-cover-template-poster-flyer-print-ad-vector.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div{
+  color: #fff;
 }
