--- a/pyrobots/src/css/robot/ListRobots.css
+++ b/pyrobots/src/css/robot/ListRobots.css
@@ -1,7 +1,4 @@
-/*==================================================
-Nearby People CSS
-==================================================*/
-.my-form {
+.box {
   background: rgba(0, 0, 0, 0.8);
   padding: 20px;
   border-radius: 10px;
@@ -9,10 +6,8 @@ Nearby People CSS
   color:white;
 }
 
-.people-nearby .nearby-user{
+.robots-list .robot-item{
 padding: 20px 0;
-/* border-top: 1px solid #f1f2f2; */
-/* border-bottom: 1px solid #f1f2f2; */
 margin-bottom: 20px;
 }
 
